--- a/app/src/main/res/layout/activity_develop_config_set.xml
+++ b/app/src/main/res/layout/activity_develop_config_set.xml
@@ -100,16 +100,36 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/radiogroupChannelConfig" />
 
-            <TextView
-                android:id="@+id/textViewValueSampleRate"
+            <RadioGroup
+                android:id="@+id/radiogroupSampleRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="20dp"
-                android:text="44100"
-                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewLabelSampleRate" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewLabelSampleRate">
+
+                <RadioButton
+                    android:id="@+id/radiobuttonSampleRate44100"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="44100"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RadioButton
+                    android:id="@+id/radiobuttonSampleRate22050"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="22050"
+                    app:layout_constraintLeft_toRightOf="@+id/radiobuttonSampleRate22050"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </RadioGroup>
 
             <!-- エンコーディングフォーマット -->
             <TextView
@@ -121,7 +141,7 @@
                 android:text="エンコーディングフォーマット"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewValueSampleRate" />
+                app:layout_constraintTop_toBottomOf="@id/radiogroupSampleRate" />
 
             <RadioGroup
                 android:id="@+id/radiogroupAudioFormat"
@@ -315,6 +335,20 @@
                 android:textOff="オフ"
                 android:textOn="オン"/>
 
+
+            <Button
+                android:id="@+id/buttonToReStart"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/restart"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/switchLog"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
