--- a/app/src/main/res/layout/activity_develop_sub_menu.xml
+++ b/app/src/main/res/layout/activity_develop_sub_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jp.excd.meloco.activity.MenuActivity">
+    tools:context="jp.excd.meloco.activity.DevelopSubMenu">
 
     <Button
         android:id="@+id/buttonClose"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/listMain"
+        android:id="@+id/menu_list_devlop_sub"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="368dp"
         android:layout_height="551dp"
