--- a/app/src/main/res/layout/activity_audio_test.xml
+++ b/app/src/main/res/layout/activity_audio_test.xml
@@ -190,6 +190,33 @@
                 app:layout_constraintTop_toBottomOf="@id/buttonPlaySinStream16bitPriority"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp" />
+            <Button
+                android:id="@+id/buttonPlayClick2"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/buttonPlayClick2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/buttonStopSinStream16bitPriority"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <Button
+                android:id="@+id/buttonStopClick2"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/buttonStopClick2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/buttonPlayClick2"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
